--- a/static/style.css
+++ b/static/style.css
@@ -1,59 +1,131 @@
-body{
-    font-size: 18px;
-    font-family: "Bona Nova SC", serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-    background-image: url(images/light-blue.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+
 }
 
+header{
+    padding: 10px;
+    margin: 0 auto;
+    width: 95%;
 
-h1{
-    font-size: 30px;
-    padding-top: 40px;
-    margin-bottom: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+    
 }
 
-form{
+.line{
+    height: 3px;
+    background-color: #000;
+    margin: 0 auto;
+}
+
+main{
+    width: 90%;
+    margin: 0 auto;
+}
+
+#kwicForm{
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    align-items: center;
+    gap: 16px;
 }
 
 label{
     font-weight: bold;
+    font-size: 15px;
+}
+
+input[type="file"]{
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #555;
+    cursor: pointer;
+
+    width: 40%;
 }
 
 button {
-    width: 20%;
-    padding: 20px 0;
-    background: #5377bffe;
+    padding: 10px;
+    background: #2d353e;
     color:rgb(255, 255, 255);
-    font-size: 18px;
+    font-size: 12px;
     font-weight: bold;
     border: none;
-    border-radius: 7px;
-    margin-bottom: 10px;
+    border-radius: 4px;
+
+    width: 100px;
+    cursor: pointer;
+
+    transition: background-color 1.5s ease;
 }
 
 button:hover{
-    background: #4162a4fe;
-    transition: 0.5s all;
+    background-color: #5c6c7d;
     transform: scale(1.05);
-    cursor: pointer;
+
 }
 
 #output {
     display: inline-flex;
     justify-content: center; 
     align-items: center;     
-    margin-top: 20px;        
     white-space: pre-wrap;
     border: 1px solid #ccc;
     padding: 10px;
-    max-width: 600px;        
-    width: 100%;             
+    max-width: 600px;    
+
+    width: 70%;       
+    margin-left: 20%;      
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 19px 10px;
+
+    font-family: Arial, Helvetica, sans-serif;
+
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer-container{
+    justify-content: space-between;
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+}
+
+.footer-section{
+    flex: 1;
+    min-height: 3px;
+    margin: 5px;
+}
+
+.form{
+    justify-content: space-between;
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+}
+
+.form-section{
+    flex: 1;
+    min-height: 3px;
+    margin: 5px;
+}
+
+footer h3 {
+    font-size: 16px;
+    margin-bottom: 10px;
 }
